# tyap

./: .gitignore  README.md
laba1/: a.out  in  out  prog1.cc  prog2.cc
laba2/: in.txt  main.cc  out.txt  test.txt  tester.py
laba3/: CMakeLists.txt  Makefile  in.txt  main.cc  mmain.cc  mmain2.cc  out.txt
laba3/tests/: func.txt
laba3/tests/ERR/: decl-func.txt  err-bin-expr.txt
laba4/: CMakeLists.txt  Makefile  in.txt  main.cc  mmain.cc  mmain2.cc  out.txt
laba4/tests/: gr-ls-eq.txt  mul-div.txt  sum-degree.txt
laba4/tests/ERR/: error-decl.txt  miss-sc.txt  vars.txt
laba5/: CMakeLists.txt  Makefile  in.txt  main.cc  mmain.cc  out.txt
laba5/tests/: bin.txt  var-const.txt
laba5/tests/ERR/: miss-br.txt  miss-eq.txt
laba6/: CMakeLists.txt  Log.hh  Makefile  StringSwitch.h  a.out  grammar.md  in  main.cc  mmain.cc  out
